adjusted margin on main to avoid overlapping

--- a/assests/style.css
+++ b/assests/style.css
@@ -43,6 +43,10 @@ body {
   
 }
 
+main {
+  margin: 100px;
+}
+
 
 
 
